--- a/templates/basic.html
+++ b/templates/basic.html
@@ -151,7 +151,12 @@
         <div class="modal-dialog modal-sm">
           <div class="modal-content">
             <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
+            {% if user.patient %}
             <div class="modal-body"><i class="fa fa-question-circle"></i><span style="color: rgb(42, 187, 6);">{{user.patient.name}}</span>, Are you sure you want to log-off?</div>
+            {% endif %}
+            {% if user.patient %}
+            <div class="modal-body"><i class="fa fa-question-circle"></i><span style="color: rgb(42, 187, 6);">{{user.doctor.name}}</span>, Are you sure you want to log-off?</div>
+            {% endif %}
             <div class="modal-footer"><a href="{% url 'logout' %}" class="btn btn-primary btn-block">Logout</a></div>
           </div>
         </div>
