--- a/templates/doctor/doctor_ui/profile.html
+++ b/templates/doctor/doctor_ui/profile.html
@@ -42,6 +42,10 @@
             <div class="row">
              <a class="btn btn-outline-info btn-block" href="{% url 'dconsultation_history' %}">view consulation history</a><br>
              </div>
+             
+            <div class="row">
+             <a class="btn btn-outline-info btn-block" href="{% url 'payment:drappoint' %}">See Appointent</a><br>
+             </div>
 <!--
 
 
