--- a/templates/patient/consultation_history/consultation_history.html
+++ b/templates/patient/consultation_history/consultation_history.html
@@ -41,7 +41,7 @@
                
                
                 <tr>
-                  <td>{{i.doctor.name}}</td>
+                  <td><b>{{i.doctor.name}}</b></td>
                   <td>{{i.doctor.user.email}}</td>
                   <td>
                   
