--- a/templates/patient/patient_ui/profile.html
+++ b/templates/patient/patient_ui/profile.html
@@ -40,11 +40,16 @@
         <div class="col" >
                <div class="row">
             
-               <a id="links" class="btn btn-outline-info btn-block" href="{% url 'checkdisease' %}">check disease </a><br>
+               <a id="links" class="btn btn-outline-info btn-block" href="{% url 'checkdisease' %}">Check disease </a><br>
                </div>
                 
                <div class="row">
-                <a class="btn btn-outline-info btn-block" href="{% url 'pconsultation_history' %}">view consulation history</a><br>
+            
+               <a id="links" class="btn btn-outline-info btn-block" href="{% url 'payment:appoint' %}">View appointments </a><br>
+               </div>
+                
+               <div class="row">
+                <a class="btn btn-outline-info btn-block" href="{% url 'pconsultation_history' %}">View consulation history</a><br>
                 </div>
 
                <div class="row">
